# se-toolkit-hackathon

./: .dockerignore  .env.docker.example  .gitignore  .markdownlint.jsonc  CONTRIBUTING.md  LICENSE  Mood_Weather_Presentation.pptx  README.md  create_presentation.py  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml  test.yml
.qwen/: settings.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/mood_weather/: __init__.py  auth.py  database.py  main.py  run.py  settings.py
backend/src/mood_weather/data/: init.sql
backend/src/mood_weather/db/: __init__.py  mood_entries.py  users.py
backend/src/mood_weather/models/: __init__.py  mood_entry.py  user.py
backend/src/mood_weather/routers/: analytics.py  mood_entries.py  users.py
backend/tests/e2e/: conftest.py  test_moods.py
backend/tests/unit/: conftest.py  test_analytics.py  test_mood_entries.py
caddy/: Caddyfile
client-web-react/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client-web-react/src/: App.css  App.tsx  Dashboard.tsx
docs/design/: architecture.md  domain-model.md
docs/requirements/: vision.md
lab/tasks/: task-1.md
mcp/mcp-mood-weather/: pyproject.toml
mcp/mcp-mood-weather/src/mcp_mood_weather/: __init__.py  __main__.py  client.py  models.py  server.py  settings.py
